# IBD-Booster

./: CMakeLists.txt  README.md  extractGT.py  main.cpp
Reproducibility/: README.md  extractGT.py  pipeline.sh
Reproducibility/src/: IBD-Booster.py  P-smoother.sh  PSmootherEvaluation.py  addError.py  addErrorVaried.py  calculateStatistics.py  constructDataset.py  convertHapMapToPLINK.py  countCorrections.py  extractTrueIBDs.py  filterSegments.py  findFalseIBDs.py  findFalseIBDs.sh  formatSegments.py  ibdInference.py  segmentAugmentation.py  simulation.py  simulationVaried.py
example/: sample.map
include/: feature_extractor.hpp  nn_predictor.hpp  pbwt.hpp  psmoother.hpp  vcf_utils.hpp  xgb_predictor.hpp
src/: IBD-Booster.py  addError.py  calculateStatistics.py  constructDataset.py  convertHapMapToPLINK.py  extractTrueIBDs.py  feature_extractor.cpp  findFalseIBDs.sh  fwdPBWT.cpp  nn_predictor.cpp  pbwt.cpp  psmoother.cpp  rPBWT.cpp  segmentAugmentation.py  vcf_utils.cpp  xgb_predictor.cpp
